# political-simulator

./: Cargo.toml  Image2.gal  README.md
src/: main.rs  test.rs
src/flow/: render.rs
src/game_date/: create.rs  text.rs
src/script/: error.rs  rand.rs  trait.rs
src/struct/: buffer.rs  game.rs  geometry.rs  gui.rs
src/struct/context/: button.rs  context.rs  font.rs
src/struct/gui/: button.rs  gui.rs  text.rs  window.rs
src/struct/logic/: date.rs  logic.rs
src/struct/logic/country/: construction.rs  control.rs  country.rs  electricity.rs  storage.rs
src/struct/web/: web.rs
src/system/: event.rs  flow.rs  flow_control.rs  render.rs  terminal.rs
src/system/draw/: date.rs  display.rs  draw.rs  gui.rs  logic.rs  text.rs
src/system/web/: game.rs  login.rs  start.rs  web.rs
src/system/web/electricity/: electricity.html  electricity.rs
src/system/web/login/: login.html  login.rs
src/system/web/main/: header.html  main.rs  navigation_bar.html
src/system/web/resourse/: resourse.html  resourse.rs
