[package]
name = "game_terminal"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"

rand = "0.8.5"

rust_decimal = "1.33.1"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3



[features]
default = ["render", "gui", "window", "button", "table"]

draw = []
event = []

render = []



gui = []

button = []
window = []
table = []
