[package]
name = "game"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"

rand = "0.8.5"

lazy_static = "1.4.0"



[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3



[features]
default = []

draw = []
event = []
