[package]
name = "game_terminal"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
minifb = "*"

rand = "0.8.5"
# rodio = "0.17.3"

# rust_decimal = "1.33.1"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3


